--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "keywords": [
     "twitter",
+    "tiktok",
     "bot",
     "video",
     "downloader"
@@ -27,7 +28,7 @@
     "dotenv": "^16.0.1",
     "download": "^8.0.0",
     "node-telegram-bot-api": "^0.57.0",
-    "twitter-url-direct": "^1.0.1"
+    "social-media-down": "^1.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
